--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         
         <!-- Welcome Text -->
-        <div class="text-white font-bold text-8xl text-center mb-8">Welcome to Counter App!</div>
+        <div class="text-white font-bold text-8xl text-center mb-8">Welcome to Counter App!!</div>
 
         <!-- Counter Box -->
         <div class="flex flex-col items-center justify-center bg-[#fafbfc] text-black px-16 py-10 rounded-lg shadow-xl">
