--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         </div>
     </div>
-
+<!--font awesome website-->
     <script src="https://kit.fontawesome.com/b9f9d455cd.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 
